<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center_vertical|center_horizontal"
        android:padding="@dimen/_8dp"
        android:text="@string/title"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:fontFamily="@font/quicksand_regular"
            android:gravity="center_vertical"
            android:paddingBottom="0dp"
            android:paddingEnd="@dimen/_16dp"
            android:paddingStart="@dimen/_16dp"
            android:paddingTop="@dimen/_16dp"
            android:text="@string/text_infoName"
            android:textAlignment="center"
            android:textSize="@dimen/size1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_weight="0"
            android:fontFamily="@font/quicksand_regular"
            android:gravity="center_vertical"
            android:hint="@string/text_field_name"
            android:inputType="textPersonName"
            android:maxLength="10"
            android:paddingTop="0dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center_vertical|center_horizontal"
            android:paddingEnd="@dimen/_16dp"
            android:paddingStart="@dimen/_16dp"
            android:text="@string/level_select"
            android:textSize="@dimen/size1" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/_16dp"
            android:paddingStart="@dimen/_16dp">

            <RadioButton
                android:id="@+id/beginner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/quicksand_regular"
                android:text="@string/btn_1" />

            <RadioButton
                android:id="@+id/advanced"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/quicksand_regular"
                android:text="@string/btn_2" />

            <RadioButton
                android:id="@+id/master"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/quicksand_regular"
                android:text="@string/btn_3" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/check_box" />

    </LinearLayout>

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/quicksand_bold"
        android:hapticFeedbackEnabled="true"
        android:onClick="send"
        android:text="@string/btn_send"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/size1" />

    <TextView
        android:id="@+id/error_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/quicksand_regular"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/_8dp"
        android:paddingEnd="@dimen/_16dp"
        android:paddingStart="@dimen/_16dp"
        android:paddingTop="@dimen/_8dp"
        android:text="@string/dummy"
        android:textAlignment="center"
        android:textColor="@color/error"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/error_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/quicksand_regular"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/_8dp"
        android:paddingEnd="@dimen/_16dp"
        android:paddingStart="@dimen/_16dp"
        android:paddingTop="@dimen/_8dp"
        android:text="@string/dummy"
        android:textAlignment="center"
        android:textColor="@color/error"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/error_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/quicksand_regular"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/_8dp"
        android:paddingEnd="@dimen/_16dp"
        android:paddingStart="@dimen/_16dp"
        android:paddingTop="@dimen/_8dp"
        android:text="@string/dummy"
        android:textAlignment="center"
        android:textColor="@color/error"
        android:textStyle="bold"
        android:visibility="gone" />

</LinearLayout>
