<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginStart="@dimen/_16dp"
            android:fontFamily="@font/quicksand_regular"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/intro"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginStart="@dimen/_16dp"
            android:fontFamily="@font/quicksand_regular"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/title"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/info" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/_16dp"
        android:fontFamily="@font/quicksand_regular"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/_32dp"
        android:text="@string/author"
        android:textColor="@color/white"
        android:textSize="@dimen/size2" />

</LinearLayout>